@@ -10,6 +10,8 @@ S3method(print,box)
 S3method(print,connect_boxes)
 S3method(print,descMrg)
 S3method(widthDetails,box)
+export(alignHorizontal)
+export(alignVertical)
 export(bezierArrowGradient)
 export(bezierArrowSmpl)
 export(boxGrob)
